--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="main_navigation_wrapper">
                     <div class="conteiner">
                         <a class="main-header-logo" href="index.html">
-                            <img src="../nerds/img/nerds-logo.svg" width="160" height="65" alt="Логотип веб студии Nerds">
+                            <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип веб студии Nerds">
                         </a>
                         <ul class="site-navigation">
                             <li><a class="site-navigation-current" href="#studio-features">Студия</a></li>
@@ -86,7 +86,7 @@
             <ul class="features-list">
                 <li class="features-items">
                     <a href="catalog.html">
-                        <img src="../nerds/img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты"> 
+                        <img src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты"> 
                         <h3 class="features-categori">Веб-сайты</h3>
                         <p class="features-title">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
                     </a>
@@ -94,7 +94,7 @@
                 </li>
                 <li class="features-items">
                     <a href="catalog.html">
-                        <img src="../nerds/img/illustration-2.jpg" width="300" height="146" alt="Веб-сайты"> 
+                        <img src="img/illustration-2.jpg" width="300" height="146" alt="Веб-сайты"> 
                         <h3 class="features-categori">Приложения</h3>
                         <p class="features-title">Покорите топ-10 приложений в AppStore и Google Play</p>   
                     </a>
@@ -102,7 +102,7 @@
                 </li>
                 <li class="features-items">
                     <a href="catalog.html">
-                        <img src="../nerds/img/illustration-3.jpg" width="300" height="146" alt="Веб-сайты"> 
+                        <img src="img/illustration-3.jpg" width="300" height="146" alt="Веб-сайты"> 
                         <h3 class="features-categori">Презентации</h3>
                         <p class="features-title">Вы даже не подозреваете, насколько вы изумительны!</p>
                     </a>
@@ -175,22 +175,22 @@
             <ul class="partners-item">
                 <li>
                     <a href="#">
-                        <img src="../nerds/img/logo-1.png" width="199" height="68" alt="Логитипы наших клиентов">
+                        <img src="img/logo-1.png" width="199" height="68" alt="Логитипы наших клиентов">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../nerds/img/logo-2.png" width="209" height="90" alt="Логитипы наших клиентов">
+                        <img src="img/logo-2.png" width="209" height="90" alt="Логитипы наших клиентов">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../nerds/img/logo-3.png" width="185" height="52" alt="Логитипы наших клиентов">
+                        <img src="img/logo-3.png" width="185" height="52" alt="Логитипы наших клиентов">
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="../nerds/img/logo-4.png" width="173" height="84" alt="Логитипы наших клиентов">
+                        <img src="img/logo-4.png" width="173" height="84" alt="Логитипы наших клиентов">
                     </a>
                 </li>
             </ul>
@@ -200,7 +200,7 @@
             <h2 class="visually-hidden">Как нас найти</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1998.5991032728616!2d30.3208946!3d59.9387942!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sua!4v1586983432275!5m2!1sru!2sua" width="100%" height="415" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <p class="contacts-map visually-hidden">
-                <img src="../nerds/img/map.jpg" width="1725" height="808" alt="Карта студии">
+                <img src="img/map.jpg" width="1725" height="808" alt="Карта студии">
             </p>
             <div class="contacts-adress">
                 <h3>NЁRDS DESIGN STUDIO</h3>
