--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Веб студия Nerds</title>
+    <meta content="width=1160" name="viewport" id="viewport">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <header class="main-header">
             <nav class="main-navigation">
                 <div class="main_navigation_wrapper">
