исправил отступ справа

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>    
             </section>   
 
-        <section class="partners conteiner" id="clients">
+        <section class="conteiner partners" id="clients">
             <h2 class="visually-hidden">Наши клиенты</h2>
             <ul class="partners-item">
                 <li>
